--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,18 +44,19 @@ repositories {
  */
 dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
+    //database ORM framework (active android)
     implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-    androidTestImplementation 'com.android.support.test:runner:0.5'
+    //unit test framework
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.robolectric:robolectric:3.8'
-    implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+
     androidTestImplementation 'com.android.support:support-annotations:27.1.1'
-    androidTestImplementation 'com.android.support.test:rules:1.0.1'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2-alpha1'
+
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
@@ -64,7 +65,6 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:27.1.1'
-    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
 
